base.core/src/main/java/application/base/application/examManagement/createAutoExamParsers/AutoExam.g4
grammar AutoExam;

stat: INIT title SEPARATOR description SEPARATOR language SEPARATOR header SEPARATOR structure INIT;

title: TEXT;

description: TEXT;

language: TEXT;

header: headerDescription SEPARATOR feedbackType SEPARATOR gradeType;

headerDescription: TEXT;

feedbackType: 'ON_SUBMISSION';

gradeType: 'ON_SUBMISSION';

structure : section+;

section: SECTIONOPEN TEXT SEPARATOR sectionStructure SECTIONCLOSE;

sectionStructure: question+;

question: INITQUESTION questiontype INITQUESTION;

questiontype: NUM SEPARATOR matching
        | NUM SEPARATOR missingWord
        | NUM SEPARATOR multipleChoice
        | NUM SEPARATOR numeric
        | NUM SEPARATOR short
        | NUM SEPARATOR trueOrFalse
        ;

matching: 'MatchingQuestion';



missingWord: 'MissingWordQuestion';



multipleChoice: 'MultipleChoiceQuestion';



numeric: 'NumericQuestion';



short: 'ShortQuestion';




trueOrFalse: 'TrueFalseQuestion';


INIT: '"' ;
INITQUESTION: '??' ;
SEPARATOR: ';' ;
SECTIONOPEN: '<<' ;
SECTIONCLOSE: '>>' ;
NUM: [0-9]+;
TEXT: [A-Za-z0-9 ]+;
SLASH: '/';
ARROW: '->';
GAPSPACE: '***';
QUESTION:'?';
WS : [ \t\r\n]+ -> skip ;
